Created complete GUI

--- a/LockSafe/LockSafe.csproj
+++ b/LockSafe/LockSafe.csproj
@@ -8,4 +8,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\LockSafeLogo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\LockSafeLogo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
